--- a/profile.html
+++ b/profile.html
@@ -39,13 +39,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
           <li class="nav-item mx-5">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link " aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item mx-5">
             <a class="nav-link" href="addrecipe.html">Add Recipe</a>
         </li>
         <li class="nav-item mx-5">
-            <a class="nav-link" href="profile.html">Profile</a>
+            <a class="nav-link active" href="profile.html">Profile</a>
         </li>
         </ul>
       </div>
